# Sol.Ai.Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REPORT_STATO_LAVORI.md  agent.py  agent_SIP.py  docker-compose.yaml  pyproject.toml
SolAI.Pipecat.LLMService/: Dockerfile  Program.cs  SolAI.Pipecat.LLMService.csproj
SolAI.Pipecat.LLMService/Data/: Ticket.cs  TicketsDbContext.cs
SolAI.Pipecat.LLMService/Infrastructure/: ToolExecutionLogger.cs
SolAI.Pipecat.LLMService/Plugins/: DataOraPlugin.cs  TicketsPlugin.cs
app/: __init__.py  config.py  logging_utils.py  observability.py  runtime_checks.py
scripts/: bootstrap_livekit_sip.py  bootstrap_livekit_sip.sh
sip/: config.yaml  dispatch-rule.json  trunk.json
